
# FIXME: For OS X, need flag for Framework or dylib
IF(DYNAMIC_BITCOIN)
    ADD_DEFINITIONS(-DBTCWALLET_LIBRARY)
ELSE()
    ADD_DEFINITIONS(-DBTCWALLET_LIBRARY_STATIC)
ENDIF()

SET(LIB_NAME btcMine)

SET(HEADER_PATH ${PROJECT_SOURCE_DIR}/include/${LIB_NAME})
SET(TARGET_H
    ${HEADER_PATH}/CPUHasher.h
    ${HEADER_PATH}/Miner.h
    ${HEADER_PATH}/MinerRPC.h
    ${BITCOIN_CONFIG_HEADER}
)

#ADD_LIBRARY(${LIB_NAME}
#    ${BITCOIN_USER_DEFINED_DYNAMIC_OR_STATIC}
#    ${LIB_PUBLIC_HEADERS}
SET(TARGET_SRC
    CPUHasher.cpp
    Miner.cpp
    MinerRPC.cpp
    ${BITCOIN_VERSIONINFO_RC}
)
SET(TARGET_LIBRARIES btc btcNode btcHTTP)

SET(TARGET_EXTERNAL_LIBRARIES
    ${CMAKE_THREAD_LIBS_INIT}    
    ${MATH_LIBRARY} 
    ${SSL_LIBRARY} 
    ${CRYPTO_LIBRARY} 
    ${BOOST_LIBRARIES} 
    ${BDB_LIBRARY} 
    ${DL_LIBRARY}
)

SETUP_LIBRARY(${LIB_NAME})

