
# FIXME: For OS X, need flag for Framework or dylib
IF(DYNAMIC_LIBCOIN)
    ADD_DEFINITIONS(-DCOINMINE_LIBRARY)
ELSE()
    ADD_DEFINITIONS(-DCOINMINE_LIBRARY_STATIC)
ENDIF()

SET(LIB_NAME btcMine)

SET(HEADER_PATH ${PROJECT_SOURCE_DIR}/include/${LIB_NAME})
SET(TARGET_H
    ${HEADER_PATH}/CPUHasher.h
    ${HEADER_PATH}/Miner.h
    ${HEADER_PATH}/MinerRPC.h
    ${LIBCOIN_CONFIG_HEADER}
)

#ADD_LIBRARY(${LIB_NAME}
#    ${LIBCOIN_USER_DEFINED_DYNAMIC_OR_STATIC}
#    ${LIB_PUBLIC_HEADERS}
SET(TARGET_SRC
    CPUHasher.cpp
    Miner.cpp
    MinerRPC.cpp
    ${LIBCOIN_VERSIONINFO_RC}
)
SET(TARGET_LIBRARIES coin coinChain coinHTTP)

SET(TARGET_EXTERNAL_LIBRARIES
    ${CMAKE_THREAD_LIBS_INIT}    
    ${MATH_LIBRARY} 
    ${SSL_LIBRARY} 
    ${CRYPTO_LIBRARY} 
    ${BOOST_LIBRARIES} 
    ${BDB_LIBRARY} 
    ${DL_LIBRARY}
)

SETUP_LIBRARY(${LIB_NAME})

