
# FIXME: For OS X, need flag for Framework or dylib
IF(DYNAMIC_BITCOIN)
    ADD_DEFINITIONS(-DBTCWALLET_LIBRARY)
ELSE()
    ADD_DEFINITIONS(-DBTCWALLET_LIBRARY_STATIC)
ENDIF()

SET(LIB_NAME btcWallet)

SET(HEADER_PATH ${PROJECT_SOURCE_DIR}/include/${LIB_NAME})
SET(TARGET_H
    ${HEADER_PATH}/wallet.h
    ${HEADER_PATH}/walletdb.h
    ${HEADER_PATH}/walletrpc.h
    ${BITCOIN_CONFIG_HEADER}
)

#ADD_LIBRARY(${LIB_NAME}
#    ${BITCOIN_USER_DEFINED_DYNAMIC_OR_STATIC}
#    ${LIB_PUBLIC_HEADERS}
SET(TARGET_SRC
    wallet.cpp
    walletdb.cpp
    walletrpc.cpp
    ${BITCOIN_VERSIONINFO_RC}
)
SET(TARGET_LIBRARIES btc btcNode btcRPC)

SET(TARGET_EXTERNAL_LIBRARIES
    ${CMAKE_THREAD_LIBS_INIT}    
    ${MATH_LIBRARY} 
    ${SSL_LIBRARY} 
    ${CRYPTO_LIBRARY} 
    ${BOOST_LIBRARIES} 
    ${BDB_LIBRARY} 
    ${DL_LIBRARY}
)

SETUP_LIBRARY(${LIB_NAME})

